--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+output
+output-bak
+
 #
 # NOTE! Don't add files that are generated in specific
 # subdirectories here. Add them in the ".gitignore" file
